# trajectory_utils

./: CMakeLists.txt  README.md  package.xml
include/planning_representations/: FlatState.h  Trajectory.h
include/trajectory_calculators/: ConstrainedPoly.h  PolynomialCalculator.h  PolynomialEvaluator.h  TimeOptimalPolynomialCalculator.h
include/trajectory_utils/: BsplineUtils.h  Evaluation.h  LineUtils.h  PathUtils.h  PublishUtils.h  Similarity.h  TrajectoryUtils.h
include/vis_utils/: BaseVisualization.h  BsplineVisualization.h
src/trajectory_calculators/: PolynomialCalculator.cpp  TimeOptimalPolynomialCalculator.cpp
