<package>
  <name>trajectory_utils</name>
  <version>0.0.0</version>
  <description>The trajectory_utils package</description>
  <author email="xuningy@andrew.cmu.edu">Xuning Yang</author>
  <maintainer email="xuningy@andrew.cmu.edu">Xuning Yang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>

</package>
